# covin

./: README.md
.github/workflows/: rust.yml
api/: .env.sample  .gitignore  Cargo.toml  Makefile  build.sh  template.yml
api/src/: alert_engine.rs  alerts.rs  auth.rs  centers.rs  covin_alert_engine.rs  covin_api.rs  covin_proxy.rs  districts.rs  lib.rs  main.rs  problem.rs  validation.rs
api/src/alert_engine/: alert_session.rs  email_client.rs  exclusion_map.rs  mod.rs  template_engine.rs
api/src/api/: alerts.rs  mod.rs
api/src/common/: auth.rs  mod.rs  problem.rs
api/src/covin/: centers.rs  districts.rs  mod.rs
app/: .env.sample  package-lock.json  package.json  tailwind.config.js
app/public/: index.html  manifest.json
app/src/: App.tsx  index.css
app/src/components/: Centers.tsx  DistrictSelect.tsx  Navigation.tsx  VaccSelect.tsx
app/src/components/alerts/: AlertEdit.tsx  AlertView.tsx
app/src/components/auth/: PrivateRoute.tsx  ProvideAuth.tsx
app/src/pages/: Alerts.tsx  Auth.tsx  Locator.tsx
app/src/pages/__/: token.tsx
app/src/services/: api.ts  auth.ts
scripts/: .gitignore  Cargo.toml
scripts/email_template/: alert.html  alert_sample.html  alert_template.json
