[package]
name = "covin-api"
version = "0.1.0"
authors = ["Aslam Ahammed <aslamplr@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.5", features = ["full"] }
warp = { version = "0.3", default-features = false, features = ["multipart", "tls"] }
warp_lambda = "0.1"
reqwest = { version = "0.11", features = ["rustls-tls", "json", "gzip"] }
http-api-problem = { version = "0.50", features = ["warp"] }
once_cell = "1.7"
tracing = "0.1"
rusoto_core = { version = "0.46", default_features = false }
biscuit = "0.5"
validator = { version = "0.13", features = ["derive", "phone"] }

# Alert Engine dependencies
lamedh_runtime = "0.3"
futures = "0.3"
chrono = "0.4"

[dependencies.tracing-subscriber]
version = "0.2"
default-features = false
features = ["env-filter", "smallvec", "fmt", "chrono", "tracing-log", "json"] 

[dependencies.dynomite]
git = "https://github.com/softprops/dynomite.git"
rev = "16c61ae635f0ea182709f64f1f47afa45e3561a8"
default_features = false
features = ["rustls"]

[[bin]]
name="alert-engine"
path="src/alert_engine.rs"
