[package]
name = "covin_scripts"
version = "0.1.0"
authors = ["Aslam Ahammed <aslamplr@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.5", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls", "json", "gzip"] }
once_cell = "1.7"
futures = "0.3"

[[bin]]
name = "extract-centers"
